held in MutliblockPatchHierarchy.

(5) MultiblockRefineAlgorithm, MultiblockRefineSchedule and
MultiblockRefinePatchStrategy have been removed, and RefineSchedule and
RefineAlgorithm can handle the multiblock communication functionality
formerly done by those classes.

(6) GriddingAlgorithm's check_overlapping_patches flag now defaults to
"WARN".


This section contains a summary of changes to SAMRAI.  More detailed
descriptions of items in the following list are provided below.

*****************************************************************************

-----------------------------------------------------------------------------
                Details about what's new
-----------------------------------------------------------------------------

(1) Block id (as in multiblock meshes) are a part of the MappedBoxId.

This is a part of changing SAMRAI multiblock from a wrapper around
single-block code to a first principle.  Everything from the MappedBox
to the PatchHierarchy will eventually be multiblock-aware.

-----------------------------------------------------------------------------
                Details about what's changed
-----------------------------------------------------------------------------

(1) Many interfaces specifying components of a MappedBoxId have been
extended to include the new BlockId component of the MappedBoxId.

Among changed interfaces are the MappedBoxId and MappedBox constructors.
NeighborhoodSets now key on the MappedBoxId instead of the GlobalId.
MappedBoxLevel interfaces for adding, removing and finding MappedBoxes
now include the BlockId.

(2) MultiblockPatchHierarchy and MultiblockPatchLevel have been removed,
with PatchHierarchy and PatchLevel now able to represent multiblock meshes.

PatchLevel now contains Patches that can exist on any block in the multiblock
configuration.  Given a Patch, the block where it exists can be queries by
calling the getMappedBox method and checking the BlockId of the returned
MappedBox.
